# ConeZen

./: .gitignore  .zenodo.json  ACKNOWLEDGMENTS.md  CITATION.cff  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  ci_branching_plane.py  ci_branching_plane_backup.py  ci_plot.py  logo2  paper.bib  paper.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
example_input/: NAC.out  QM.out  README.md  S0_gradient.out  S1_gradient.out  ci_parameters.txt  gradientA.out  gradientB.out  orca.xyz
example_input/ethylene_a/: x_vector.out  y_vector.out
example_output/: README.md  ci_parameters.txt  x_vectors.out  y_vectors.out
paper/: paper.md
src/conezen/: __init__.py  api.py  cli.py  logic.py
tests/: NAC.out  test_real_data.py  x_vectors.in
tests/test_data/: NAC.out  ci_parameters.txt  gradientA.out  gradientB.out  orca.xyz  y_vectors.out
